--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ import '../styles/global.css';
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-slate-950 text-white font-sans">
+	<body class="bg-slate-950 text-white font-sans scroll-smooth">
 		<slot />
 	</body>
 </html>
